# omni-home

./: .gitignore  Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  run.sh  tailwind.config.js
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_inventory_created_by_inventory_updated_by.py  0003_inventorytype_inventory_types.py
inventory/templates/inventory/: inventory_detail.html  inventory_edit.html  inventory_list.html
inventory/tests/: test_inventory.py
locations/: admin.py  models.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_alter_location_options_remove_location_floor_and_more.py
locations/static/css/: inventory.css
locations/templates/locations/: location_detail.html  location_form.html  location_list.html
locations/tests/: test_models.py
omni_home/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  dashboard.html
templates/components/: navbar.html
templates/locations/: location_detail.html  location_form.html  location_list.html
templates/registration/: logged_out.html  login.html
users/migrations/: 0001_initial.py
